# Estru2

./: README.md
CsvSample/: CMakeLists.txt  Methods.cpp  Methods.hpp  StudentRec.hpp  main  main.cpp  sample1.csv  test_students.csv
StudentSerializer/: CMakeLists.txt  student_serializer.cpp  student_serializer.hpp  test_student_serializer.cpp
csv/: Archivos.csv  CsvStudentRecord.hpp  main  main.cpp  main2  main2.cpp  students.csv  students.json  students2.csv
csvJson/: CMakeLists.txt  CsvStudentRecord.hpp  ayuda.json  main.cpp  students_sample_500.csv
csvJson/nlohmann/: json.hpp
pruebacmake/: CMakeLists.txt  CliArgs.cpp  CliArgs.hpp  StudentFIle.cpp  StudentFile.cpp  StudentFile.hpp  StudentRecord.hpp  main.cpp
